[package]
name = "nip_core"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]

[dependencies]
byteorder = "1.2"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
git2 = "0.7"
hyper = "0.12"
ipfs-api = "0.5.0-alpha"
log = "0.4"
serde = "1.0"
serde_cbor = "0.9"
serde_derive = "1.0"
tokio-core = "0.1"
