[package]
name = "nip_core"
description = "The backing library for the nip git-ipfs helper"
version = "0.2.1"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
repository = "https://github.com/drozdziak1/nip_core"
readme = "README.md"
keywords = ["git", "ipfs", "libgit2", "p2p"]
categories = []
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "drozdziak1/nip_core" }
maintenance = { status = "actively-developed" }

[features]
default = ["migrations"]

# Migrations from older versions of nip
migrations = []

[dependencies]
byteorder = "1.2"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
git2 = "0.7"
hyper = "0.12"
ipfs-api = "0.5"
log = "0.4"
serde = "1.0"
serde_cbor = "0.9"
serde_derive = "1.0"
tokio = "0.1"
